Item #5586 - external logbook * Endpoint added in AdmExtResource POST -> /logbookoperations * Same Endpoing added in AdmIntResource -> calling internal logbook * Unit Tests and Integration Tests added * Permissions updated * Cucumber declaration added in order to test an external logbook creation * Raml updated

--- a/deployment/ansible-vitam/roles/vitam/templates/security-internal/personal-certificate-permissions.conf.j2
+++ b/deployment/ansible-vitam/roles/vitam/templates/security-internal/personal-certificate-permissions.conf.j2
@@ -107,3 +107,5 @@ permissionsWithoutPersonalCertificate:
   - 'preservationScenario:read'
   - 'preservation:update'
   - 'batchreport:id:read'
+  - 'preservationreport:id:read'
+  - 'logbookoperations:create'
