--- a/deployment/ansible-vitam/roles/vitam/templates/storage/storage.conf.j2
+++ b/deployment/ansible-vitam/roles/vitam/templates/storage/storage.conf.j2
@@ -1,5 +1,5 @@
 urlWorkspace: {{ vitam.workspace | client_url }}
-timeoutMsPerKB: 100
+timeoutMsPerKB: {{vitam.storageengine.timeoutMsPerKB}}
 jettyConfig: jetty-config.xml
 zippingDirecorty: {{vitam_folder_data}}/storage_archives
 loggingDirectory: {{vitam_folder_log}}
