--- a/deployment/ansible-vitam/roles/vitam/templates/security-internal/personal-certificate-permissions.conf.j2
+++ b/deployment/ansible-vitam/roles/vitam/templates/security-internal/personal-certificate-permissions.conf.j2
@@ -106,4 +106,4 @@ permissionsWithoutPersonalCertificate:
   - 'preservationScenarios:read'
   - 'preservationScenario:read'
   - 'preservation:update'
-  - 'preservationreport:id:read'
+  - 'batchreport:id:read'
