--- a/deployment/ansible-vitam/roles/mongo_configure/templates/mongo-data/init-logbook-database.js.j2
+++ b/deployment/ansible-vitam/roles/mongo_configure/templates/mongo-data/init-logbook-database.js.j2
@@ -12,12 +12,10 @@ db.LogbookOperation.createIndex( { "_tenant" : 1 , "evIdProc" : 1 } )
 db.LogbookOperation.createIndex( { "_lastPersistedDate": 1, "_tenant" : 1 })
 
 //db.LogbookLifeCycleUnit.createIndex( { "_id" : 1 , "_tenant" : 1 , "evIdProc" : 1 , "events.evIdProc" : 1 } )
-db.LogbookLifeCycleUnit.createIndex( { "_tenant" : 1 , "events.evIdProc" : 1 } )
 // Required for unit lifecycle traceability (select by _lastPersistedDate && _tenant, order by _lastPersistedDate via index prefix)
 db.LogbookLifeCycleUnit.createIndex( { "_lastPersistedDate": 1, "_tenant" : 1 })
 
 //db.LogbookLifeCycleObjectGroup.createIndex( { "_id" : 1 , "_tenant" : 1 , "evIdProc" : 1 , "events.evIdProc" : 1 , "_tenant" : 1 } )
-db.LogbookLifeCycleObjectGroup.createIndex( { "_tenant" : 1 , "events.evIdProc" : 1 } )
 // Required for object group lifecycle traceability (select by _lastPersistedDate && _tenant, order by _lastPersistedDate via index prefix)
 db.LogbookLifeCycleObjectGroup.createIndex( { "_lastPersistedDate": 1, "_tenant" : 1 })
 
@@ -26,3 +24,5 @@ db.LogbookLifeCycleUnit.dropIndex( { "evDateTime" : 1} )
 db.LogbookLifeCycleObjectGroup.dropIndex( { "evDateTime" : 1} )
 db.LogbookLifeCycleUnit.dropIndex( { "_tenant" : 1 , "obId" : 1 } )
 db.LogbookLifeCycleObjectGroup.dropIndex( { "_tenant" : 1 , "obId" : 1 } )
+db.LogbookLifeCycleUnit.dropIndex( { "_tenant" : 1 , "events.evIdProc" : 1 } )
+db.LogbookLifeCycleObjectGroup.dropIndex( { "_tenant" : 1 , "events.evIdProc" : 1 } )
