Add use of sudo to execute command configurable

--- a/deployment/ansible-vitam/roles/vitam/templates/offer/default-storage.conf.j2
+++ b/deployment/ansible-vitam/roles/vitam/templates/offer/default-storage.conf.j2
@@ -45,6 +45,7 @@ tapeLibraryConfiguration:
   outputTarStorageFolder: "{{ vitam_folder_data }}/offer/outputTars"
   maxTarEntrySize: 100000
   maxTarFileSize: 1000000
+  useSudo: false
 
   topology:
     buckets:
