--- a/deployment/ansible-vitam/roles/vitam/templates/ihm-recette/static-strategy.json.j2
+++ b/deployment/ansible-vitam/roles/vitam/templates/ihm-recette/static-strategy.json.j2
@@ -4,7 +4,7 @@
         "copy" : {{ vitam_strategy|length }},
         "offers" : [
             {% for item in vitam_strategy %}
-            {"id" : "{{ item.name }}.service.{{ item.vitam_site_name |default(vitam_site_name) }}.{{ consul_domain }}"{% if item.referent is defined %}{% if item.referent|lower == "true" %}, "referent" : true{% endif %}{% endif %}}{% if not loop.last %},{% endif %}
+            {"id" : "{{ item.name }}.service.{{ item.vitam_site_name |default(vitam_site_name) }}.{{ consul_domain }}"{% if item.referent is defined %}{% if item.referent|lower == "true" %}, "referent" : true{% endif %}{% endif %}{% if item.status is defined %}, "status" :  "{{ item.status| upper }}" {% endif %}}{% if not loop.last %},{% endif %}
             {% endfor %}
         ]
     }
