--- a/deployment/ansible-vitam/roles/vitam/templates/functional-administration/functional-administration.conf.j2
+++ b/deployment/ansible-vitam/roles/vitam/templates/functional-administration/functional-administration.conf.j2
@@ -33,6 +33,7 @@ listEnableExternalIdentifiers:
   0:
     - INGEST_CONTRACT
     - ACCESS_CONTRACT
+    - ARCHIVE_UNIT_PROFILE
   1:
     - INGEST_CONTRACT
     - ACCESS_CONTRACT
