Asked by Edouard : write correct syntax for date

--- a/sources/ihm-demo/ihm-demo-front/src/app/my-selection/my-selection/massive-update-form/massive-update-form.component.html
+++ b/sources/ihm-demo/ihm-demo-front/src/app/my-selection/my-selection/massive-update-form/massive-update-form.component.html
@@ -14,7 +14,7 @@
                 </div>
 
                 <div class="ui-g-12">
-                    <span class="ui-g-12">Les dates doivent être entrées au format JJ/MM/AAAA</span>
+                    <span class="ui-g-12">Les dates doivent être entrées au format AAAA-MM-JJ</span>
 
                     <div class="ui-g-12" *ngIf="internalSavedMetadata.length > 0">
                         <div class="ui-g-3">Nom du champ</div>
