--- a/deployment/ansible-vitam/roles/elasticsearch-cluster/templates/log4j2.properties.j2
+++ b/deployment/ansible-vitam/roles/elasticsearch-cluster/templates/log4j2.properties.j2
@@ -68,7 +68,7 @@ appender.index_search_slowlog_rolling.policies.time.interval = 1
 appender.index_search_slowlog_rolling.policies.time.modulate = true
 
 logger.index_search_slowlog_rolling.name = index.search.slowlog
-logger.index_search_slowlog_rolling.level = trace
+logger.index_search_slowlog_rolling.level = {{ composant.index_search_slowlog_rolling_level }}
 logger.index_search_slowlog_rolling.appenderRef.index_search_slowlog_rolling.ref = index_search_slowlog_rolling
 logger.index_search_slowlog_rolling.additivity = false
 
@@ -84,6 +84,6 @@ appender.index_indexing_slowlog_rolling.policies.time.interval = 1
 appender.index_indexing_slowlog_rolling.policies.time.modulate = true
 
 logger.index_indexing_slowlog.name = index.indexing.slowlog.index
-logger.index_indexing_slowlog.level = trace
+logger.index_indexing_slowlog.level = {{ composant.index_indexing_slowlog_level }}
 logger.index_indexing_slowlog.appenderRef.index_indexing_slowlog_rolling.ref = index_indexing_slowlog_rolling
 logger.index_indexing_slowlog.additivity = false
