--- a/deployment/ansible-vitam/roles/elasticsearch-cluster/templates/elasticsearch.j2
+++ b/deployment/ansible-vitam/roles/elasticsearch-cluster/templates/elasticsearch.j2
@@ -38,7 +38,7 @@ ES_STARTUP_SLEEP_TIME=5
 #ES_DIRECT_SIZE=
 
 # Additional Java OPTS
-#ES_JAVA_OPTS=
+ES_JAVA_OPTS=""
 
 # Configure restart on package upgrade (true, every other setting will lead to not restarting)
 #RESTART_ON_UPGRADE=true
