Set wiredtiger cache size

--- a/deployment/ansible-vitam/roles/mongod/templates/mongod.conf.j2
+++ b/deployment/ansible-vitam/roles/mongod/templates/mongod.conf.j2
@@ -19,6 +19,12 @@ storage:
 
   directoryPerDB: true
 
+{% if mongod_memory is defined and mongod_memory != '' %}
+  wiredTiger:
+    engineConfig:
+        cacheSizeGB: {{ mongod_memory }}
+{% endif %}
+
 
 # network interfaces
 net:
