--- a/deployment/ansible-vitam/roles/vitam/templates/ingest-external/ingest-external.conf.j2
+++ b/deployment/ansible-vitam/roles/vitam/templates/ingest-external/ingest-external.conf.j2
@@ -3,7 +3,7 @@ jettyConfig: jetty-config.xml
 authentication: false
 tenantFilter : true
 antiVirusScriptName: scan-{{ vitam_struct.antivirus }}.sh
-timeoutScanDelay: 60000
+timeoutScanDelay: {{vitam_struct.timeoutScanDelay}}
 baseUploadPath: {{ vitam_struct.upload_dir }}
 successfulUploadDir: {{ vitam_struct.success_dir }}
 failedUploadDir: {{ vitam_struct.fail_dir }}
