--- a/sources/ihm-demo/ihm-demo-front/src/app/referentials/details/archive-unit-profile/archive-unit-profile.component.html
+++ b/sources/ihm-demo/ihm-demo-front/src/app/referentials/details/archive-unit-profile/archive-unit-profile.component.html
@@ -1,4 +1,4 @@
-<p-panel [header]="'Détail du document type'">
+<p-panel [header]="'Détail du profil d\'unités archivistiques'">
   <div class="ui-g" *ngIf="!saveRunning">
     <div class="ui-g-8"></div>
     <div class="ui-g-2" *ngIf="!update"></div>
