Various fixes for CGI/minarm on hardened OS

--- a/deployment/ansible-vitam/roles/elasticsearch-cluster/templates/jvm.options.j2
+++ b/deployment/ansible-vitam/roles/elasticsearch-cluster/templates/jvm.options.j2
@@ -115,3 +115,6 @@
 # WARNING: This option will be removed in Elasticsearch 6.0.0 and is provided
 # only for migration purposes.
 #-Delasticsearch.json.allow_unquoted_field_names=true
+
+
+-Djna.tmpdir={{ vitam_defaults.folder.root_path }}/tmp/{{ composant.cluster_name }}
