--- a/deployment/ansible-vitam/roles/mongoc/templates/mongoc.conf.j2
+++ b/deployment/ansible-vitam/roles/mongoc/templates/mongoc.conf.j2
@@ -22,6 +22,11 @@ net:
   port: {{ mongodb.mongoc_port }}
   bindIp: {{ ip_service }}{% if groups['hosts-dev-tools'] | length > 0 and ip_service != ip_admin %},{{ ip_admin }}{% endif %}
 
+  unixDomainSocket:
+    enabled: true
+    pathPrefix: {{ mongo_tmp_path }}
+    filePermissions: 0700
+
 
 # operationProfiling:
 replication:
