--- a/deployment/ansible-vitam/roles/elasticsearch-cluster/templates/elasticsearch.j2
+++ b/deployment/ansible-vitam/roles/elasticsearch-cluster/templates/elasticsearch.j2
@@ -46,6 +46,8 @@ ES_JAVA_OPTS="-XX:+UseGCLogFileRotation -XX:NumberOfGCLogFiles=10 -XX:GCLogFileS
 # Path to the GC log file
 #ES_GC_LOG_FILE={{ vitam_defaults.folder.root_path }}/log/{{ composant.cluster_name }}/gc.log
 
+ES_TMPDIR={{ vitam_defaults.folder.root_path }}/tmp/{{ composant.cluster_name }}
+
 ################################
 # Elasticsearch service
 ################################
