Add computeInheritedRules Workflow

--- a/deployment/ansible-vitam/roles/vitam/templates/security-internal/personal-certificate-permissions.conf.j2
+++ b/deployment/ansible-vitam/roles/vitam/templates/security-internal/personal-certificate-permissions.conf.j2
@@ -109,3 +109,4 @@ permissionsWithoutPersonalCertificate:
   - 'batchreport:id:read'
   - 'preservationreport:id:read'
   - 'logbookoperations:create'
+  - 'computeInheritedRules:action'
